iframe flattening doesn't flatten https://bugs.webkit.org/show_bug.cgi?id=36798

WebCore: Fix wrongly reversing logic in frame flattening check.

Reviewed by Antti Koivisto.

Tests:
fast/frames/flattening/iframe-flattening-fixed-height.html
fast/frames/flattening/iframe-flattening-fixed-width.html
fast/frames/flattening/iframe-flattening-fixed-width-and-height.html
fast/frames/flattening/iframe-flattening-fixed-width-and-height-no-scrolling.html

* rendering/RenderPartObject.cpp:
(WebCore::RenderPartObject::flattenFrame):

LayoutTests: Add more tests for iframe flattening

Reviewed by Antti Koivisto.

* fast/frames/flattening/iframe-flattening-fixed-height.html
* fast/frames/flattening/iframe-flattening-fixed-width.html
* fast/frames/flattening/iframe-flattening-fixed-width-and-height.html
* fast/frames/flattening/iframe-flattening-fixed-width-and-height-no-scrolling.html

Canonical link: https://commits.webkit.org/48145@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@56852 268f45cc-cd09-0410-ab3c-d52691b4dbfc