WebCore/rendering/RenderPart.cpp
@@ -27,7 +27,7 @@
 #include "RenderView.h"
 #include "Frame.h"
 #include "FrameView.h"
-#include "HTMLFrameElement.h"
+#include "HTMLFrameElementBase.h"
 
 namespace WebCore {
 
@@ -60,7 +60,6 @@ void RenderPart::layoutWithFlattening(bool fixedWidth, bool fixedHeight)
 {
     FrameView* childFrameView = static_cast<FrameView*>(widget());
     RenderView* childRoot = childFrameView ? static_cast<RenderView*>(childFrameView->frame()->contentRenderer()) : 0;
-    HTMLFrameElement* element = static_cast<HTMLFrameElement*>(node());
 
     // Do not expand frames which has zero width or height
     if (!width() || !height() || !childRoot) {
@@ -80,25 +79,26 @@ void RenderPart::layoutWithFlattening(bool fixedWidth, bool fixedHeight)
     // we obey them and do not expand. With frame flattening
     // no subframe much ever become scrollable.
 
+    HTMLFrameElementBase* element = static_cast<HTMLFrameElementBase*>(node());
     bool isScrollable = element->scrollingMode() != ScrollbarAlwaysOff;
 
-    // make sure minimum preferred width is enforced
-    if (isScrollable || !fixedWidth)
-        setWidth(max(width(), childRoot->minPrefWidth()));
+    // consider iframe inset border
+    int hBorder = borderLeft() + borderRight();
+    int vBorder = borderTop() + borderBottom();
 
-    // update again to pass the width to the child frame
-    updateWidgetPosition();
-    childFrameView->layout();
+    // make sure minimum preferred width is enforced
+    if (isScrollable || !fixedWidth) {
+        setWidth(max(width(), childRoot->minPrefWidth() + hBorder));
+        // update again to pass the new width to the child frame
+        updateWidgetPosition();
+        childFrameView->layout();
+    }
 
     // expand the frame by setting frame height = content height
     if (isScrollable || !fixedHeight || childRoot->isFrameSet())
-        setHeight(max(height(), childFrameView->contentsHeight()));
+        setHeight(max(height(), childFrameView->contentsHeight() + vBorder));
     if (isScrollable || !fixedWidth || childRoot->isFrameSet())
-        setWidth(max(width(), childFrameView->contentsWidth()));
-
-    // make room for the inset border
-    setWidth(width() + borderLeft() + borderRight());
-    setHeight(height() + borderTop() + borderBottom());
+        setWidth(max(width(), childFrameView->contentsWidth() + hBorder));
 
     updateWidgetPosition();
 
